<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/menu_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_appkiv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Znajdz"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_backgruud"
        android:onClick="changeMenuOption"
        android:text="@string/wypozyczalnia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/Trasy"
        style="@style/ButtonMenu"
        android:background="@drawable/button_backgruud"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/trasy"
        android:onClick="changeMenuOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Znajdz" />


    <Button
        android:id="@+id/special_places"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_backgruud"
        android:onClick="changeMenuOption"
        android:text="@string/specialplaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Trasy" />

    <Button
        android:id="@+id/createJourney"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_backgruud"
        android:onClick="changeMenuOption"
        android:text="@string/create_journey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/special_places" />

    <Button
        android:id="@+id/Kontakt"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_backgruud"
        android:onClick="changeMenuOption"
        android:text="@string/kontakt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createJourney" />

    <Button
        android:id="@+id/alarm_data"
        style="@style/ButtonMenu"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_backgruud"
        android:onClick="changeMenuOption"
        android:text="@string/alarm_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Kontakt" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="changeMenuOption"
        android:background="@drawable/settings"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>